Add content for first recipe, including image

--- a/recipes/soy-marinated-london-broil.html
+++ b/recipes/soy-marinated-london-broil.html
@@ -7,5 +7,34 @@
 </head>
 <body>
     <h1>Soy Marinated London Broil</h1>
+
+    <img src="./images/soy-marinated-london-broil-500x500.jpg" alt="Soy Marinated London Broil plated and ready to eat" height="500" width="500">
+
+    <h2>Description</h2>
+
+    <p>This is a quick and easy dinner that uses a short marinade and simple ingredients. Serve over white or brown rice and pair with stir-fried broccoli.</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>1.5 lbs London broil</li>
+        <li>1/2 cup soy sauce</li>
+        <li>1/4 cup light brown sugar</li>
+        <li>1 clove garlic sliced thickly</li>
+        <li>8 scallions</li>
+        <li>(optional) sesame seeds for serving</li>
+    </ul>
+
+    <h2>Instructions</h2>
+
+    <ol>
+        <li>In a large skillet, stir together the soy sauce, brown sugar and garlic. Add the beef and turn to coat. Marinate for 20 minutes, flipping once.</li>
+        <li>Remove meat and place on a broiler pan or foil-lined sheet. Reserve the marinade in the skillet. Season the meat with some freshly ground black pepper and then broil until medium rare, about 5 minutes per side.</li>
+        <li>While the meat is cooking, set the skillet over high heat and boil the marinade for a few minutes to sterilize. Lower the heat to medium and add the scallions.</li>
+        <li>Let the meat rest for 5-10 minutes, then slice thinly. Arrange over cooked rice and top with sauce and scallions. Top with sesame seeds if desired.</li>
+    </ol>
+
+
+
 </body>
 </html>
