--- a/recipes/soy-marinated-london-broil.html
+++ b/recipes/soy-marinated-london-broil.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Soy Marinated London Broil</h1>
 
-    <img src="./images/soy-marinated-london-broil-500x500.jpg" alt="Soy Marinated London Broil plated and ready to eat" height="500" width="500">
+    <img src="../images/soy-marinated-london-broil-500x500.jpg" alt="Soy Marinated London Broil plated and ready to eat" height="500" width="500">
 
     <h2>Description</h2>
 
