Fix list code on recipe list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/soy-marinated-london-broil.html">Soy Marinated London Broil</a>
+    <ul>
+        <li><a href="./recipes/soy-marinated-london-broil.html">Soy Marinated London Broil</a></li>
+        <li><a href="./recipes//iced-coffee.html">Quick "Cold-Brew" Iced Coffee</a></li>
+    </ul>
+
 </body>
 </html>
