Fix link to iced coffee page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <ul>
         <li><a href="./recipes/soy-marinated-london-broil.html">Soy Marinated London Broil</a></li>
-        <li><a href="./recipes//iced-coffee.html">Quick "Cold-Brew" Iced Coffee</a></li>
+        <li><a href="./recipes/iced-coffee.html">Quick "Cold-Brew" Iced Coffee</a></li>
     </ul>
 
 </body>
