Add initial styling
Create CSS and establish initial rules. This is
just practice with CSS rules for now.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
@@ -8,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <ul>
+    <ul class="list">
         <li><a href="./recipes/soy-marinated-london-broil.html">Soy Marinated London Broil</a></li>
         <li><a href="./recipes/iced-coffee.html">Quick "Cold-Brew" Iced Coffee</a></li>
     </ul>
