--- a/recipes/iced-coffee.html
+++ b/recipes/iced-coffee.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick "Cold-Brew" Iced Coffee</title>
@@ -8,7 +9,7 @@
 <body>
     <h1>Quick "Cold-Brew" Iced Coffee</h1>
 
-    <img src="../images/iced-coffee.jpg" alt="Delicious cold iced coffee" height="225" width="225">
+    <img class="recipe-image" src="../images/iced-coffee.jpg" alt="Delicious cold iced coffee" height="225" width="225">
 
     <h2>Description</h2>
 
