--- a/recipes/soy-marinated-london-broil.html
+++ b/recipes/soy-marinated-london-broil.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -8,7 +9,7 @@
 <body>
     <h1>Soy Marinated London Broil</h1>
 
-    <img src="../images/soy-marinated-london-broil-500x500.jpg" alt="Soy Marinated London Broil plated and ready to eat" height="500" width="500">
+    <img class="recipe-image" src="../images/soy-marinated-london-broil-500x500.jpg" alt="Soy Marinated London Broil plated and ready to eat" height="500" width="500">
 
     <h2>Description</h2>
 
